...
        child: ScaleTransition(
          scale: _scaleAnimation,
          alignment: Alignment.topLeft,
          child: Material(
            color: Colors.transparent,
            child: Container(
              key: const Key('context-menu-popover'),
              constraints: BoxConstraints(
                minWidth: widget.minWidth,
                maxWidth: widget.maxWidth,
              ),
              decoration: BoxDecoration(
                color: widget.backgroundColor,
...
